[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "fastmcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic==2.9.2",
    "python-multipart==0.0.9",
    "pytz>=2024.1",
    "stripe>=7.0.0",
    "uvicorn[standard]==0.30.6",
]
